src/widgets/Product/styles.css
.root {
  font-size: 14px;
  padding: 6%!important;
  display: block;
  background-color: transparent;
  transition: background-color .35s ease-in-out;
  text-decoration: none;
  user-select: none;
  border: none!important;
  &.simple{
    padding: 0 8px 15px 8px;
  }
  &:hover {
    background-color: #f7f7f7;
  }
  &.simple:hover{
    background-color: initial;
  }
}

:global(.findify-widget--products-carousel) .root:hover{
  background-color: inherit;
}

.image-wrap {
  position: relative;
  overflow: hidden;
}

.image {
  max-height: 150px;
  max-width: 100%;
  display: block;
  margin: 0 auto;
}

:global(.findify-block--autocomplete-body) .image {
  max-height: 65px;
}

.content{
  font-size: 14px;
}

.title {
  color: #404040;
  font-size: 14px!important;
  margin: 5px 0!important;
  font-weight: normal!important;
  word-wrap: break-word;
  line-height: 1.3!important;
  .simple &{
    margin: 10px 0!important;
    font-weight: normal;
  }
}

.description {
  font-size: 12px;
  color: #b2b2b2;
  margin: 5px 0;
}

.rating {
  margin: 5px 0;
}

.price-wrap {
  margin: 5px 0;
  white-space: nowrap;
  line-height: inherit;
  .simple &{
    margin: 0
  }
}

.price, .compare {
  font-size: 1em;
  color: #404040;
  display: inline-block;
  .simple &{
    font-weight: bold;
  }
}

.compare {
  text-decoration: line-through;
  margin-left: 5px;
}

.color{
  text-transform: none;
  font-size: 13px;
  color: #b2b2b2;
  margin: 5px 0;
}

